Removed unused dependency. Added remaining dependency refs. Build and install is all good (y)

--- a/WixCRMSetup/Product.wxs
+++ b/WixCRMSetup/Product.wxs
@@ -125,14 +125,24 @@
 					  Name="NGettext.dll"
 					  Source="$(var.AddinFiles)" />
 			</Component>
-		  <Component Id="SuiteCRMAddIn_nunit3testadapter_Component">
+		  <!--<Component Id="SuiteCRMAddIn_nunit3testadapter_Component">
 		    <File Id="SuiteCRMAddIn_nunit3testadapter" KeyPath="yes"
 		          Name="nunit.engine.dll"
 		          Source="$(var.AddinFiles)" />
-		  </Component>
+		  </Component>-->
 		  <Component Id="SuiteCRMAddIn_tidyhtml5managedrepack_Component">
 		    <File Id="SuiteCRMAddIn_tidyhtml5managedrepack" KeyPath="yes"
 		          Name="tidy.x86.dll"
+		          Source="$(var.AddinFiles)" />
+		  </Component>
+		  <Component Id="SuiteCRMAddIn_tidyhtml5managedrepackx64_Component">
+		    <File Id="SuiteCRMAddIn_tidyhtml5managedrepackx64" KeyPath="yes"
+		          Name="tidy.x64.dll"
+		          Source="$(var.AddinFiles)" />
+		  </Component>
+		  <Component Id="SuiteCRMAddIn_tidyhtmlManaged_Component">
+		    <File Id="SuiteCRMAddIn_tidyhtmlManaged" KeyPath="yes"
+		          Name="TidyHTML5Managed.dll"
 		          Source="$(var.AddinFiles)" />
 		  </Component>
 
